# api-client-template

./: .env.example  .gitignore  Makefile  README.md  __init__.py  client.py  environment.py  exceptions.py  pyproject.toml  services.py
scripts/: format.sh  lint.sh
src/: __init__.py  client.py  environment.py  exceptions.py  services.py  session.py  types_1.py
