[tool.poetry]
name = "api-client"
version = "0.1.0"
description = ""
authors = ["Aristide <aristide.bamazi@imsp-uac.org>"]
license = "mit"
readme = "README.md"
packages = [{include = "api_client"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
